<?xml version="1.0"?>
<project
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
	xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<modelVersion>4.0.0</modelVersion>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>16</source>
                    <target>16</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <parent>
		<groupId>deep-learning</groupId>
		<artifactId>com.deep.learning</artifactId>
		<version>0.0.1-SNAPSHOT</version>
	</parent>
	<artifactId>deep-framework</artifactId>
	<name>deep-framework</name>
	<url>http://maven.apache.org</url>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-math3</artifactId>
			<version>3.6.1</version>
		</dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.8.5</version>
		</dependency>
		<dependency>
			<groupId>com.alibaba</groupId>
			<artifactId>fastjson</artifactId>
			<version>1.2.58</version>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.aparapi</groupId>
			<artifactId>aparapi</artifactId>
			<version>2.0.0</version>
		</dependency>
		<dependency>
			<groupId>org.jogamp.jocl</groupId>
			<artifactId>jocl</artifactId>
			<version>2.3.2</version>
		</dependency>
		<dependency>
			<groupId>org.jogamp.jocl</groupId>
			<artifactId>jocl</artifactId>
			<version>2.3.2</version>
			<classifier>natives-windows-amd64</classifier>
		</dependency>
		<dependency>
			<groupId>org.jogamp.gluegen</groupId>
			<artifactId>gluegen-rt</artifactId>
			<version>2.3.2</version>
		</dependency>
		<dependency>
			<groupId>org.jogamp.gluegen</groupId>
			<artifactId>gluegen-rt</artifactId>
			<version>2.3.2</version>
			<classifier>natives-windows-amd64</classifier>
		</dependency>
	</dependencies>
</project>
